--- a/WebShopDatacrafter/WebShopDatacrafter/appsettings.json
+++ b/WebShopDatacrafter/WebShopDatacrafter/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PC-MS2\\SQLEXPRESS;Database=webshop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": ""
   },
   "Logging": {
       "LogLevel": {
