--- a/WebShopDatacrafter/WebShopDatacrafter/Properties/launchSettings.json
+++ b/WebShopDatacrafter/WebShopDatacrafter/Properties/launchSettings.json
@@ -1,7 +1,11 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "anonymousAuthentication": false,
+    "iis": {
+      "applicationUrl": "http://localhost/WebShopDatacrafter",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:51180",
       "sslPort": 44316
@@ -9,19 +13,20 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "IIS",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "ancmHostingModel": "OutOfProcess"
     },
     "WebShopDatacrafter": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
