EntityFrameworkCore, komponent all-boards, kontroler AllBoards

--- a/WebShop/WebShop/appsettings.json
+++ b/WebShop/WebShop/appsettings.json
@@ -1,10 +1,15 @@
 {
+  "ConnectionStrings": {
+
+    "DefaultConnection": "Server=server.pl,2401;Database=databaseName;User ID=login;Password='P@ss';"
+
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
