--- a/WebShop/WebShop/appsettings.json
+++ b/WebShop/WebShop/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=server.pl,2401;Database=databaseName;User ID=login;Password='P@ss';"
+    "DefaultConnection": "Server=server1.pl,2401;Database=databaseName1;User ID=login;Password='P@ss1';"
 
   },
   "Logging": {
