--- a/Reshop/Reshop/clientapp/package.json
+++ b/Reshop/Reshop/clientapp/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "clientapp",
+  "name": "sportstore",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.24",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.5.5",
+    "axios": "^0.27.2",
+    "bootstrap": "^4.1.2",
+    "graphql": "^16.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "5.0.1",
+    "redux": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
