--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -43,6 +43,7 @@ jobs:
         cache: 'npm'
 
     - name: npm install, build, and test
+      working-directory: ./Reshop/Reshop/clientapp
       run: |
         npm install
         npm run build --if-present
