--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -37,6 +37,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up Node.js
+      working-directory: ./Reshop/Reshop/clientapp
       uses: actions/setup-node@v3
       with:
         node-version: ${{ env.NODE_VERSION }}
