--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-        cache-dependency-path: subdir/package-lock.json
+        cache-dependency-path: ./Reshop/Reshop/clientapp/package-lock.json
 
     - name: npm install, build, and test
       working-directory: ./Reshop/Reshop/clientapp
