--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.sln.docstates
 WebShop/WebShop/appsettings.json
 appsettings.json
+datacrafter.pl.publishsettings
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
